--- a/blackjackgame.css
+++ b/blackjackgame.css
@@ -2,7 +2,7 @@
 
 body {
     margin: 0;
-    background-image: url(bjbackground.jpg);
+    background-image: url(bilder/bjbackground.jpg);
     background-size: cover;
 
 }
