--- a/blackjackgame.css
+++ b/blackjackgame.css
@@ -15,6 +15,11 @@ body {
     font-family: "Open Sans", sans-serif;
 }
 
+img {
+    width: 100%;
+}
+/* End minimal CSS Reset */
+
 .bhead {
 
     font-size: 60px;
