--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@ body {
     margin: 0;
     background-image: url(bilder/bjbackground.jpg);
     background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 80px 0px 80px 0px;
 
 
 }
@@ -105,5 +110,12 @@ button:hover {
 
 section {
     animation: fadeIn 2s ease forwards;
-
+    border: 5px solid rgba(255, 255, 255, 0.8);
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);
+    background: rgba(255, 255, 255, 0.122);
+    margin: 20px;
+    padding: 30px;
+    width: 70%;
+    max-width: 1000px;
 }
+
