--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 body {
     margin: 0;
-    background-image: url(bilder/bjbackground.jpg);
+    background-image: url(bilder/bakgrunn.jpg);
     background-size: cover;
     display: flex;
     justify-content: center;
@@ -112,7 +112,7 @@ section {
     animation: fadeIn 2s ease forwards;
     border: 5px solid rgba(255, 255, 255, 0.8);
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);
-    background: rgba(255, 255, 255, 0.122);
+    background: rgba(255, 255, 255, 0.193);
     margin: 20px;
     padding: 30px;
     width: 70%;
