--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
     margin: 0;
     background-image: url(bilder/bakgrunn.jpg);
     background-size: cover;
+    background-position: center;
     display: flex;
     justify-content: center;
     align-items: center;
