--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
+:root {
+    --bakgrunn-grå-farge: rgba(255, 255, 255, 0.193);
+}
+
 body {
     margin: 0;
     background-image: url(bilder/bakgrunn.jpg);
@@ -113,7 +117,7 @@ section {
     animation: fadeIn 2s ease forwards;
     border: 5px solid rgba(255, 255, 255, 0.8);
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);
-    background: rgba(255, 255, 255, 0.193);
+    background: var(--bakgrunn-grå-farge);
     margin: 20px;
     padding: 30px;
     width: 70%;
